--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 </p>	
 <p>  Hi, Hello World!</p>
 <p> vanilla icecream is better than all other icecream</p>
+<p> vanilla icecream is better than all other icecream</p>
 </html>
