--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <p> :) Hello, I am the Best, This is a simple webapp.It's not that beautiful on the outside but it's beautiful on th inside
 </p>	
 <p>  Hi, Hello World!</p>
-<p> vanilla icecream is better than all other icecream</p>
+<p> ddvanilla icecream is better than all other icecream</p>
 <p> vanilla icecream is better than all other icecream</p>
 </html>
